Fixed bug of header components in News-pages. Beside that, recoded 2 pages: tin-tot-nghiep.html and tin-khoa-hoc-cong-nghe.html. (Pinned 1 more picture).

--- a/pages/tin-tuc/tin-hoc-vu.html
+++ b/pages/tin-tuc/tin-hoc-vu.html
@@ -3,10 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Tin tức - Khoa Khoa học và Kỹ thuật thông tin</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css?family=Gelasio:700,600|Inter:300,400,500|Inknut+Antiqua:600,800" rel="stylesheet">
+    <title>Tin tức - Học vụ - Khoa Khoa học và Kỹ thuật thông tin</title>
     <link rel="stylesheet" href="../../styles/components.css">
     <link rel="stylesheet" href="../../styles/tin-tuc.css">
     <script src="../../js/utils.js"></script>
@@ -14,13 +11,13 @@
 <body>
 <div id="header-container"></div>
 <!-- Thân Tin tức -->
- <div class="decorate-picture">
-    <img src="../../assets/news-banner-picture.jpg" style="max-width: 100%; width: 1320px; height: auto; max-height: 380px; align-self: stretch; border-radius: 32px; margin: 12px 80px 0 80px; display: block;">
+ <div class>
+    <img src="../../assets/news-banner-picture.jpg" class="decorate-picture">
  </div>
  <div class="page-caption">
     <h1>TIN HỌC VỤ</h1>
     <p>Trang tin tức cập nhật nhanh chóng các thông tin mới nhất về các tin tức học vụ về <br>các chuyên ngành thuộc Khoa Khoa học và Kỹ thuật Thông tin.</p>
-    <hr>
+    <img src="../../assets/news-chevron-double-down.svg"> 
  </div>
 <div class="news-list-type-1">
     <div class="list-caption-nav">
