--- a/pages/tin-tuc/tin-tot-nghiep.html
+++ b/pages/tin-tuc/tin-tot-nghiep.html
@@ -4,9 +4,6 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Tin Tốt nghiệp - Khoa Khoa học và Kỹ thuật thông tin</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css?family=Gelasio:700,600|Inter:300,400,500|Inknut+Antiqua:600,800" rel="stylesheet">
     <link rel="stylesheet" href="../../styles/components.css">
     <link rel="stylesheet" href="../../styles/tin-tuc.css">
     <script src="../../js/utils.js"></script>
@@ -14,19 +11,19 @@
 <body>
 <div id="header-container"></div>
 <div>
-    <img src="banner-picture-news.jpg" class="decorate-picture"> 
+    <img src="../../assets/news-banner-picture.jpg" class="decorate-picture"> 
  </div>
  <div class="page-caption">
     <h1>TIN TỐT NGHIỆP</h1>
     <p>Trang tin tức cập nhật nhanh chóng các thông tin mới nhất về các thời điểm tốt nghiệp <br>các chuyên ngành thuộc Khoa Khoa học và Kỹ thuật Thông tin.</p>
-    <img src="news-chevron-double-down.svg">
+    <img src="../../assets/news-chevron-double-down.svg">
  </div>
 <div class="flex-news">
-    <div class="flex-item">
-        <img src="graduated-2023-1.jpg">
+    <h2>Tin tức nổi bật</h2>
+    <div class="flex-item-1">
+        <img src="../../assets/news-decorate-picture-0.jpg">
         <div class="news-box">
-            <h2>Tin tức nổi bật</h2>
-            <h3>Lễ tốt nghiệp và trao bằng đợt 1 2023</h3>
+            <h3><strong>Lễ tốt nghiệp và trao bằng đợt 1 2023</strong></h3>
             <p> Kính gửi các anh/chị Học viên cao học,
                 <br>Khoa Khoa học và Kỹ thuật Thông tin kính chuyển đến các anh/chị học viên cao học thông tin tổ chức Lễ tốt nghiệp.
                 <br>Phòng Công tác Sinh viên thông báo đến các bạn học viên, sinh viên thời gian tổ chức Lễ tốt nghiệp và Trao bằng...
@@ -34,19 +31,44 @@
             <a class="news-link" href="#">Xem thêm</a> 
         </div>
     </div>
-    <div class="flex-item">
+    <div class="flex-item-2">
         <div class="news-box">
-            <h2>Tin tức mới nhất</h2>
-            <h3>Lễ tốt nghiệp và trao bằng đợt 1 2024</h3>
+            <h3><strong>Lễ tốt nghiệp và trao bằng đợt 1 2024</strong></h3>
             <p> Kính gửi các anh/chị Học viên cao học,
                 <br>Khoa Khoa học và Kỹ thuật Thông tin kính chuyển đến các anh/chị học viên cao học thông tin tổ chức Lễ tốt nghiệp.
                 <br>Phòng Công tác Sinh viên thông báo đến các bạn học viên, sinh viên thời gian tổ chức Lễ tốt nghiệp và Trao bằng...
             </p>
             <a class="news-link" href="#">Xem thêm</a>
         </div>
-        <img src="graduated-2024-1.jpg">
+        <img src="../../assets/news-decorate-picture-2.jpg">
     </div>
 </div>
+<div class="flex-news">
+    <h2>Tin tức mới nhất</h2>
+    <div class="flex-item-1">
+        <img src="../../assets/news-decorate-picture-0.jpg">
+        <div class="news-box">
+            <h3><strong>Lễ tốt nghiệp và trao bằng đợt 1 2023</strong></h3>
+            <p> Kính gửi các anh/chị Học viên cao học,
+                <br>Khoa Khoa học và Kỹ thuật Thông tin kính chuyển đến các anh/chị học viên cao học thông tin tổ chức Lễ tốt nghiệp.
+                <br>Phòng Công tác Sinh viên thông báo đến các bạn học viên, sinh viên thời gian tổ chức Lễ tốt nghiệp và Trao bằng...
+            </p>
+            <a class="news-link" href="#">Xem thêm</a> 
+        </div>
+    </div>
+    <div class="flex-item-2">
+        <div class="news-box">
+            <h3><strong>Lễ tốt nghiệp và trao bằng đợt 1 2024</strong></h3>
+            <p> Kính gửi các anh/chị Học viên cao học,
+                <br>Khoa Khoa học và Kỹ thuật Thông tin kính chuyển đến các anh/chị học viên cao học thông tin tổ chức Lễ tốt nghiệp.
+                <br>Phòng Công tác Sinh viên thông báo đến các bạn học viên, sinh viên thời gian tổ chức Lễ tốt nghiệp và Trao bằng...
+            </p>
+            <a class="news-link" href="#">Xem thêm</a>
+        </div>
+        <img src="../../assets/news-decorate-picture-2.jpg">
+    </div>
+</div>
+
 <div class="Read-more-list">
     <h2 class="Read-more-list-caption">ĐỌC THÊM</h2>
     <div class="Read-more-list-flex">
