--- a/pages/tin-tuc/tin-khoa-hoc-cong-nghe.html
+++ b/pages/tin-tuc/tin-khoa-hoc-cong-nghe.html
@@ -4,9 +4,6 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Tin Khoa học - Công nghệ - Khoa Khoa học và Kỹ thuật thông tin</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css?family=Gelasio:700,600|Inter:300,400,500|Inknut+Antiqua:600,800" rel="stylesheet">
     <link rel="stylesheet" href="../../styles/components.css">
     <link rel="stylesheet" href="../../styles/tin-tuc.css">
     <script src="../../js/utils.js"></script>
@@ -14,32 +11,30 @@
 <body>
 <div id="header-container"></div>
 <div>
-    <img src="banner-picture-news.jpg" class="decorate-picture"> 
+    <img src="../../assets/news-banner-picture.jpg" class="decorate-picture"> 
  </div>
  <div class="page-caption">
     <h1>TIN KHOA HỌC - CÔNG NGHỆ</h1>
     <p>Trang tin tức cập nhật nhanh chóng các thông tin về các đề tài nghiên cứu khoa học<br>được hướng dẫn bởi các giảng viên thuộc Khoa Khoa học và Kỹ thuật Thông tin.</p>
-    <img src="news-chevron-double-down.svg">
+    <img src="../../assets/news-chevron-double-down.svg">
  </div>
 <div class="flex-news">
-    <div class="flex-item">
-        <img src="graduated-2023-1.jpg">
+    <h2>Tin tức mới nhất</h2>
+    <div class="flex-item-1">
+        <img src="../../assets/news-decorate-picture-0.jpg">
         <div class="news-box">
-            <h2>Tin tức nổi bật</h2>
-            <h3>Thông báo về việc đăng ký đề tài nghiên cứu khoa học sinh viên/ học viên cao học năm 2024</h3>
-            <p> Nhằm đẩy mạnh phong trào nghiên cứu khoa học trong sinh viên/ học viên cao học, kích thích sự say mê tìm tòi học hỏi của sinh viên; Phòng ĐTSĐH&KHCN đề nghị các đơn vị thông báo đến toàn thể các sinh viên/ học viên cao học và giảng viên hướng dẫn thuộc đơn vị mình về đăng ký đề tài nghiên cứu khoa học sinh viên/ học viên cao học năm 2024 như sau:
-            </p>
+            <h3><strong>Thông báo về việc đăng ký đề tài nghiên cứu khoa học sinh viên/ học viên cao học năm 2024</strong></h3>
+            <p>  Nhằm đẩy mạnh phong trào nghiên cứu khoa học trong sinh viên/ học viên cao học, kích thích sự say mê tìm tòi học hỏi của sinh viên; Phòng ĐTSĐH&KHCN đề nghị các đơn vị thông báo đến toàn thể các sinh viên/ học viên cao học và giảng viên hướng dẫn thuộc đơn vị mình về đăng ký đề tài nghiên cứu khoa học sinh viên/ học viên cao học năm 2024 như sau:</p>
             <a class="news-link" href="#">Xem thêm</a> 
         </div>
     </div>
-    <div class="flex-item">
+    <div class="flex-item-2">
         <div class="news-box">
-            <h2>Tin tức mới nhất</h2>
-            <h3>Thông báo danh sách kết quả xét duyệt đề tài NCKH-SV đợt 1 năm 2025</h3>
+            <h3><strong>Thông báo danh sách kết quả xét duyệt đề tài NCKH-SV đợt 1 năm 2025</strong></h3>
             <p>Phòng ĐTSĐH&KHCN thông báo đến các bạn SV và GVHD danh sách kết quả xét duyệt đề tài NCKH-SV đợt 1 năm 2025 và các đề tài ĐẠT được Khoa đề xuất ký hợp đồng triển khai.</p>
             <a class="news-link" href="#">Xem thêm</a>
         </div>
-        <img src="graduated-2024-1.jpg">
+        <img src="../../assets/news-decorate-picture-2.jpg">
     </div>
 </div>
 <div class="Read-more-list">
