--- a/pages/tin-tuc/tin-tuyen-dung.html
+++ b/pages/tin-tuc/tin-tuyen-dung.html
@@ -4,9 +4,6 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Tin Tuyển dụng - Khoa Khoa học và Kỹ thuật thông tin</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css?family=Gelasio:700,600|Inter:300,400,500|Inknut+Antiqua:600,800" rel="stylesheet">
     <link rel="stylesheet" href="../../styles/components.css">
     <link rel="stylesheet" href="../../styles/tin-tuc.css">
     <script src="../../js/utils.js"></script>
@@ -14,12 +11,12 @@
 <body>
 <div id="header-container"></div>
 <div>
-    <img src="news-banner-picture.jpg" class="decorate-picture">
+    <img src="../../assets/news-banner-picture.jpg" class="decorate-picture">
  </div>
  <div class="page-caption">
     <h1>TIN TUYỂN DỤNG</h1>
     <p>Trang tin tức cập nhật nhanh chóng các thông tin về <br>các yêu cầu tuyển dụng của các công ty đối với sinh viên thuộc Khoa Khoa học và Kỹ thuật Thông tin.</p>
-    <img src="news-chevron-double-down.svg">
+    <img src="../../assets/news-chevron-double-down.svg">
  </div>
  <!--List tin tức-->
  <div class="container">
