Add new pages for university admission information for 2025

--- a/404.html
+++ b/404.html
@@ -29,6 +29,12 @@
                 '/gioi-thieu': '/pages/gioi-thieu/gioi-thieu-chung.html',
                 '/gioi-thieu-chung': '/pages/gioi-thieu/gioi-thieu-chung.html',
                 '/doi-ngu-nhan-su': '/pages/gioi-thieu/doi-ngu-nhan-su.html',
+
+                '/tuyen-sinh/tuyen-sinh-dai-hoc': '/pages/tuyen-sinh/tuyen-sinh-dai-hoc.html',
+                '/tuyen-sinh/tuyen-sinh-sau-dai-hoc': '/pages/tuyen-sinh/tuyen-sinh-sau-dai-hoc.html',
+                '/tuyen-sinh/hoc-bong-tuyen-sinh': '/pages/tuyen-sinh/hoc-bong-tuyen-sinh.html',
+                '/tuyen-sinh/tuyen-sinh-tin-tuc': '/pages/tuyen-sinh/tuyen-sinh-tin-tuc.html',
+                '/tuyen-sinh/phuong-thuc-tuyen-sinh': '/pages/tuyen-sinh/phuong-thuc-tuyen-sinh.html',
                 
                 '/nhom-nghien-cuu/bao-mat-blockchain-iot': '/pages/nhom-nghien-cuu/bao-mat-blockchain-iot.html',
                 '/nhom-nghien-cuu/khoa-hoc-du-lieu': '/pages/nhom-nghien-cuu/khoa-hoc-du-lieu.html',
