--- a/pages/tuyen-sinh/hoc-bong-tuyen-sinh.html
+++ b/pages/tuyen-sinh/hoc-bong-tuyen-sinh.html
@@ -16,7 +16,7 @@
         <!-- Banner -->
         <div class="banner">
             <img class="banner__img"
-                 src="../../assets/scholarship-banner.png"
+                 src="/ISE_Web/assets/scholarship-banner.png"
                  alt="Sinh viên trong lễ trao học bổng" />
             <div class="banner__overlay" aria-hidden="true"></div>
             <div class="banner__content">
