--- a/pages/tuyen-sinh/phuong-thuc-tuyen-sinh.html
+++ b/pages/tuyen-sinh/phuong-thuc-tuyen-sinh.html
@@ -33,7 +33,7 @@
 
             <div class="content">
                 <img class="banner"
-                     src="../../assets/banner-phuong-thuc.png"
+                     src="/ISE_Web/assets/banner-phuong-thuc.png"
                      alt="University campus" />
 
 
