--- a/pages/tuyen-sinh/tuyen-sinh-sau-dai-hoc.html
+++ b/pages/tuyen-sinh/tuyen-sinh-sau-dai-hoc.html
@@ -34,7 +34,7 @@
         <section id="admission-info" class="section">
             <div class="container grid">
                 <figure class="media">
-                    <img src="../../assets/postgrad1.png" alt="Ngành tuyển sinh và chỉ tiêu" />
+                    <img src="/ISE_Web/assets/postgrad1.png" alt="Ngành tuyển sinh và chỉ tiêu" />
                 </figure>
                 <div class="content">
                     <h2 class="title">I. NGÀNH TUYỂN SINH VÀ CHỈ TIÊU</h2>
@@ -56,7 +56,7 @@
                     </div>
                 </div>
                 <figure class="media">
-                    <img src="../../assets/postgrad2.png" alt="Thông tin đào tạo" />
+                    <img src="/ISE_Web/assets/postgrad2.png" alt="Thông tin đào tạo" />
                 </figure>
             </div>
         </section>
@@ -127,7 +127,7 @@
         <section id="fees" class="section">
             <div class="container grid">
                 <figure class="media">
-                    <img src="../../assets/postgrad3.png" alt="Thông tin lệ phí" />
+                    <img src="/ISE_Web/assets/postgrad3.png" alt="Thông tin lệ phí" />
                 </figure>
                 <div class="content">
                     <h2 class="title">V. LỆ PHÍ THI</h2>
@@ -176,7 +176,7 @@
                     </div>
                 </div>
                 <figure class="media">
-                    <img src="../../assets/postgrad4.png" alt="Minh họa học phí" />
+                    <img src="/ISE_Web/assets/postgrad4.png" alt="Minh họa học phí" />
                 </figure>
             </div>
         </section>
