--- a/pages/tuyen-sinh/tuyen-sinh-tin-tuc.html
+++ b/pages/tuyen-sinh/tuyen-sinh-tin-tuc.html
@@ -33,8 +33,8 @@
               <div class="scores-content-wrapper">
                   <!-- Nút quay lại -->
                   <div class="back-button">
-                      <a href="../tuyen-sinh/tuyen-sinh.html" class="back-link">
-                          <img src="../../assets/arrow-left-icon.png" alt="Quay lại trang tuyển sinh">
+                      <a href="/ISE_Web/tuyen-sinh/tuyen-sinh-dai-hoc.html" class="back-link">
+                          <img src="/ISE_Web/assets/arrow-left-icon.png" alt="Quay lại trang tuyển sinh">
 
                       </a>
                   </div>
@@ -119,8 +119,8 @@
                   <div class="scores-content-wrapper">
                       <!-- Nút quay lại -->
                       <div class="back-button">
-                          <a href="../tuyen-sinh/tuyen-sinh.html" class="back-link">
-                              <img src="../../assets/arrow-left-icon.png" alt="Quay lại trang tuyển sinh">
+                          <a href="/ISE_Web/tuyen-sinh/tuyen-sinh-dai-hoc.html" class="back-link">
+                              <img src="/ISE_Web/assets/arrow-left-icon.png" alt="Quay lại trang tuyển sinh">
 
                           </a>
                       </div>
@@ -181,7 +181,7 @@
                   </div>
               </section>
           </section>
-          <script src="../../js/tuyen-sinh.js"></script>
+          <script src="/ISE_Web/js/tuyen-sinh.js"></script>
     <div id="footer-container"></div>
   </body>
 </html>
