--- a/pages/tuyen-sinh/tuyen-sinh-dai-hoc.html
+++ b/pages/tuyen-sinh/tuyen-sinh-dai-hoc.html
@@ -5,8 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Tuyển sinh 2025</title>
     <link href="https://fonts.googleapis.com/css2?family=Be+Vietnam+Pro:wght@700;800;900&display=swap&subset=vietnamese" rel="stylesheet">
-    <link rel="stylesheet" href="/ISE_Web//styles/tuyen-sinh.css">
+    <link rel="stylesheet" href="/ISE_Web/styles/tuyen-sinh.css">
     <link rel="stylesheet" href="/ISE_Web/styles/components.css">
+    <script src="/ISE_Web/js/utils.js"></script>
     <script src="/ISE_Web/js/tuyen-sinh.js" defer></script>
 </head>
 <body>
