Add utils.js script to multiple admission pages for enhanced loading

--- a/pages/tuyen-sinh/hoc-bong-tuyen-sinh.html
+++ b/pages/tuyen-sinh/hoc-bong-tuyen-sinh.html
@@ -1,12 +1,14 @@
 <!doctype html>
 <html lang="vi">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Học bổng 2025 – Thông tin & Điều kiện</title>
-  <meta name="description" content="Thông tin học bổng Toàn diện – Sáng tạo – Phụng sự năm 2025." />
-  <link rel="stylesheet" href="/ISE_Web//styles/hoc-bong-tuyen-sinh.css">
-   <link rel="stylesheet" href="/ISE_Web/styles/components.css">
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>Học bổng 2025 – Thông tin & Điều kiện</title>
+    <meta name="description" content="Thông tin học bổng Toàn diện – Sáng tạo – Phụng sự năm 2025." />
+    <link rel="stylesheet" href="/ISE_Web//styles/hoc-bong-tuyen-sinh.css">
+    <link rel="stylesheet" href="/ISE_Web/styles/components.css">
+    <script src="/ISE_Web/js/utils.js"></script>
+
 </head>
 
 <body>
