--- a/pages/tuyen-sinh/phuong-thuc-tuyen-sinh.html
+++ b/pages/tuyen-sinh/phuong-thuc-tuyen-sinh.html
@@ -6,8 +6,9 @@
     <title>Thông tin tuyển sinh 2025 - QSC</title>
     <meta name="description" content="Thông tin tuyển sinh năm 2025 - Mã trường QSC" />
     <link rel="stylesheet" href="/ISE_Web/styles/phuong-thuc-tuyen-sinh.css" />
-     <link rel="stylesheet" href="/ISE_Web/styles/components.css">
-    
+    <link rel="stylesheet" href="/ISE_Web/styles/components.css">
+    <script src="/ISE_Web/js/utils.js"></script>
+
 </head>
 <body>
     <div id="header-container"></div>
