--- a/pages/tuyen-sinh/tuyen-sinh-dai-hoc.html
+++ b/pages/tuyen-sinh/tuyen-sinh-dai-hoc.html
@@ -47,7 +47,7 @@
                                     Chương trình Việt - Nhật: 7480201_VN
                                 </p>
                                 <p class="program-desc">Chương trình đào tạo chuyên sâu về phần mềm, mạng và hệ thống...</p>
-                                <a class="program-link" href="/ISE_Web/dao-tao.html?tab=bachelor">Xem chi tiết →</a>
+                                <a class="program-link" href="/ISE_Web/dao-tao?tab=bachelor">Xem chi tiết →</a>
                             </div>
 
                             <!-- Ô 2 -->
