--- a/pages/tuyen-sinh/tuyen-sinh-sau-dai-hoc.html
+++ b/pages/tuyen-sinh/tuyen-sinh-sau-dai-hoc.html
@@ -6,7 +6,9 @@
     <title>Tuyển sinh Sau đại học 2025 – Thông tin</title>
     <meta name="description" content="Thông tin tuyển sinh sau đại học năm 2025, lịch xét tuyển, phương thức, lệ phí, hồ sơ, liên hệ." />
     <link rel="stylesheet" href="/ISE_Web/styles/tuyen-sinh-sau-DH.css">
-     <link rel="stylesheet" href="/ISE_Web/styles/components.css">
+    <link rel="stylesheet" href="/ISE_Web/styles/components.css">
+    <script src="/ISE_Web/js/utils.js"></script>
+
 <body>
     <div id="header-container"></div>
     <main id="main-content">
