--- a/pages/tuyen-sinh/tuyen-sinh-tin-tuc.html
+++ b/pages/tuyen-sinh/tuyen-sinh-tin-tuc.html
@@ -9,6 +9,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Be+Vietnam+Pro:wght@700;800;900&family=Inter:wght@400;500;600;700;800;900&display=swap&subset=vietnamese" rel="stylesheet">
     <link rel="stylesheet" href="/ISE_Web//styles/tuyen-sinh-tin-tuc.css">
     <link rel="stylesheet" href="/ISE_Web/styles/components.css">
+    <script src="/ISE_Web/js/utils.js"></script>
+
   </head>
   <body>
     <div id="header-container"></div>
