Add new images and update image paths in home.html

--- a/pages/home.html
+++ b/pages/home.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="../styles/components.css">
     <link rel="stylesheet" href="../styles/home.css">
     <script src="../js/home.js"></script>
+    <script src="../js/utils.js"></script>
 </head>
 <body>
 <body>
@@ -22,19 +23,19 @@
         </div>
         <div class="list">
             <div class="item">
-                <img src="../assets/test/1.jpg" alt="">
+                <img src="ISE_Web/assets/1.jpg" alt="">
             </div>
             <div class="item">
-                <img src="../assets/test/2.jpg" alt="">
+                <img src="ISE_Web/assets/2.jpg" alt="">
             </div>
             <div class="item">
-                <img src="../assets/test/3.jpg" alt="">
+                <img src="ISE_Web/assets/3.jpg" alt="">
             </div>
             <div class="item">
-                <img src="../assets/test/4.jpg" alt="">
+                <img src="ISE_Web/assets/4.jpg" alt="">
             </div>
             <div class="item">
-                <img src="../assets/test/5.jpg" alt="">
+                <img src="ISE_Web/assets/5.jpg" alt="">
             </div>
         </div>
         <div class="buttons">
@@ -52,7 +53,7 @@
     <!-- Lời chào mừng -->
     <div class="welcome">
         <div class="welcome-img">
-            <img src="../assets/home-welcome-img.png">
+            <img src="ISE_Web/assets/home-welcome-img.png">
         </div>
         <div class="welcome-content">
             <p>Chào mừng đến với</p>
@@ -81,7 +82,7 @@
             <div class="tabs">
                 <ul class="tabs-nav">
                     <li class="tabs-nav-item active" data-target="KHDL">
-                        <img src="../assets/home-tab-img-1.png">
+                        <img src="ISE_Web/assets/home-tab-img-1.png">
                         <div class="tabs-nav-content">
                             <h4>KHOA HỌC DỮ LIỆU</h4>
                             <p>Bậc cử nhân・4 năm</p>
@@ -89,7 +90,7 @@
                         </div>
                     </li>
                     <li class="tabs-nav-item" data-target="CNTT">
-                        <img src="../assets/home-tab-img-2.png">
+                        <img src="ISE_Web/assets/home-tab-img-2.png">
                         <div class="tabs-nav-content">
                             <h4>CÔNG NGHỆ THÔNG TIN </h4>
                             <p>Bậc cử nhân / Bậc thạc sĩ / Bậc tiến sĩ</p>
@@ -97,7 +98,7 @@
                         </div>
                     </li>
                     <li class="tabs-nav-item" data-target="CNNB">
-                        <img src="../assets/home-tab-img-3.png">
+                        <img src="ISE_Web/assets/home-tab-img-3.png">
                         <div class="tabs-nav-content">
                             <h4>CÔNG NGHỆ THÔNG TIN VIỆT NHẬT </h4>
                             <p>Bậc cử nhân・4 năm</p>
@@ -108,7 +109,7 @@
                 </ul>
                 <div class="tabs-content">
                     <div class="tabs-content-items active" id="KHDL">
-                        <img src="../assets/home-tab-img-1.png">
+                        <img src="ISE_Web/assets/home-tab-img-1.png">
                         <h4>KHOA HỌC DỮ LIỆU</h4>
                         <p>Bậc cử nhân・4 năm</p>
                         <p>Trang bị kiến thức về thống kê, học máy, trí tuệ nhân tạo và trực quan hóa dữ liệu để phân tích, dự đoán và xây dựng giải pháp dựa trên dữ liệu thực tế</p>
@@ -121,7 +122,7 @@
                         <a href="">Tìm hiểu thêm &#8594</a>
                     </div>
                     <div class="tabs-content-items" id="CNTT">
-                        <img src="../assets/home-tab-img-2.png">
+                        <img src="ISE_Web/assets/home-tab-img-2.png">
                         <h4>CÔNG NGHỆ THÔNG TIN</h4>
                         <p>Bậc cử nhân / Bậc thạc sĩ / Bậc tiến sĩ</p>
                         <p>Trang bị kiến thức về lập trình, hệ thống, mạng và bảo mật, giúp sinh viên phát triển phần mềm xây dựng giải pháp số </p>
@@ -134,7 +135,7 @@
                         <a href="">Tìm hiểu thêm &#8594</a>
                     </div>
                     <div class="tabs-content-items" id="CNNB">
-                        <img src="../assets/home-tab-img-3.png">
+                        <img src="ISE_Web/assets/home-tab-img-3.png">
                         <h4>CÔNG NGHỆ THÔNG TIN VIỆT - NHẬT</h4>
                         <p>Bậc cử nhân・4 năm</p>
                         <p>Trang bị kiến thức về khoa học dữ liệu lớn và công nghệ web cùng hướng phát triển làm việc với các doanh nghiệp Nhật Bản</p>
@@ -182,34 +183,34 @@
         <div class="auto-slider" style="--width: 100px; --height: 192px; --quantity:10;">
             <div class="wrapper">
                 <div class="img-item" style="--position: 1;">
-                    <img src="../assets/home-scroll-img-1.png">
+                    <img src="ISE_Web/assets/home-scroll-img-1.png">
                 </div> 
                 <div class="img-item" style="--position: 2;">
-                    <img src="../assets/home-scroll-img-2.png">
+                    <img src="ISE_Web/assets/home-scroll-img-2.png">
                 </div> 
                 <div class="img-item" style="--position: 3;">
-                    <img src="../assets/home-scroll-img-3.png">
+                    <img src="ISE_Web/assets/home-scroll-img-3.png">
                 </div> 
                 <div class="img-item" style="--position: 4;">
-                    <img src="../assets/home-scroll-img-4.png">
+                    <img src="ISE_Web/assets/home-scroll-img-4.png">
                 </div> 
                 <div class="img-item"  style="--position: 5;"> 
-                    <img src="../assets/home-scroll-img-5.png">
+                    <img src="ISE_Web/assets/home-scroll-img-5.png">
                 </div> 
                 <div class="img-item"  style="--position: 6;">
-                    <img src="../assets/home-scroll-img-6.png">
+                    <img src="ISE_Web/assets/home-scroll-img-6.png">
                 </div> 
                 <div class="img-item"  style="--position: 7;">
-                    <img src="../assets/home-scroll-img-7.png">
+                    <img src="ISE_Web/assets/home-scroll-img-7.png">
                 </div> 
                 <div class="img-item"  style="--position: 8;">
-                    <img src="../assets/home-scroll-img-8.png">
+                    <img src="ISE_Web/assets/home-scroll-img-8.png">
                 </div> 
                 <div class="img-item"  style="--position: 9;">
-                    <img src="../assets/home-scroll-img-9.png">
+                    <img src="ISE_Web/assets/home-scroll-img-9.png">
                 </div> 
                 <div class="img-item" style="--position: 10;">
-                    <img src="../assets/home-scroll-img-10.png">
+                    <img src="ISE_Web/assets/home-scroll-img-10.png">
                 </div> 
             </div>
         </div>
