--- a/pages/home.html
+++ b/pages/home.html
@@ -9,12 +9,10 @@
     <!-- Import CSS chung từ components -->
     <link rel="stylesheet" href="../styles/components.css">
     <link rel="stylesheet" href="../styles/home.css">
-    <script src="../js/home.js"></script>
-    <script src="../js/utils.js"></script>
 </head>
 <body>
 <body>
-    
+    <div id="header-container"></div>
     <div class="slider">
         <div class="slider-content">
             <h3>Trường Đại học Công nghệ Thông tin</h3>
@@ -23,19 +21,19 @@
         </div>
         <div class="list">
             <div class="item">
-                <img src="ISE_Web/assets/1.jpg" alt="">
+                <img src="../assets/test/1.jpg" alt="">
             </div>
             <div class="item">
-                <img src="ISE_Web/assets/2.jpg" alt="">
+                <img src="../assets/test/2.jpg" alt="">
             </div>
             <div class="item">
-                <img src="ISE_Web/assets/3.jpg" alt="">
+                <img src="../assets/test/3.jpg" alt="">
             </div>
             <div class="item">
-                <img src="ISE_Web/assets/4.jpg" alt="">
+                <img src="../assets/test/4.jpg" alt="">
             </div>
             <div class="item">
-                <img src="ISE_Web/assets/5.jpg" alt="">
+                <img src="../assets/test/5.jpg" alt="">
             </div>
         </div>
         <div class="buttons">
@@ -119,7 +117,7 @@
                             <li>Khai phá dữ liệu</li>
                             <li>Học sâu</li>
                         </ul>
-                        <a href="">Tìm hiểu thêm &#8594</a>
+                        <a href="../pages/dao-tao.html">Tìm hiểu thêm &#8594</a>
                     </div>
                     <div class="tabs-content-items" id="CNTT">
                         <img src="ISE_Web/assets/home-tab-img-2.png">
@@ -132,7 +130,7 @@
                             <li>Phát triển Website</li>
                             <li>Công nghệ dữ liệu lớn</li>
                         </ul>
-                        <a href="">Tìm hiểu thêm &#8594</a>
+                        <a href="../pages/dao-tao.html">Tìm hiểu thêm &#8594</a>
                     </div>
                     <div class="tabs-content-items" id="CNNB">
                         <img src="ISE_Web/assets/home-tab-img-3.png">
@@ -145,7 +143,7 @@
                             <li>Kiểm chứng phần mềm</li>
                             <li>Văn hóa doanh nghiệp</li>
                         </ul>
-                        <a href="">Tìm hiểu thêm &#8594</a>
+                        <a href="../pages/dao-tao.html">Tìm hiểu thêm &#8594</a>
                     </div>
                 </div>
             </div>
@@ -171,7 +169,7 @@
             <h4>Khoa học - công nghệ</h4>
             <h3>MỘT SỐ KẾT QUẢ NỔI BẬT</h3>
             <p>Khoa Khoa học và Kỹ thuật Thông tin tập hợp một đội ngũ nghiên cứu với các chuyên gia có kinh nghiệm trong nghiên cứu cơ bản cũng như phát triển các giải pháp ứng dụng về trí tuệ nhân tạo, học máy, dữ liệu lớn, thị giác máy tính, xử lý ngôn ngữ tự nhiên...</p>
-            <a href="">Tìm hiểu thêm &#8594</a>
+            <a href="../pages/cong-bo-khoa-hoc.html">Tìm hiểu thêm &#8594</a>
         </div>
     </div>
     <!--Doanh nghiệp - Đối tác-->
@@ -215,5 +213,7 @@
             </div>
         </div>
     </div>>
+    <div id="footer-container"></div>
+    <script src="../js/home.js"></script>
 </body>
 </html>
