change in home.html/css and add some new picture for slider.

--- a/pages/home.html
+++ b/pages/home.html
@@ -9,12 +9,10 @@
     <!-- Import CSS chung từ components -->
     <link rel="stylesheet" href="../styles/components.css">
     <link rel="stylesheet" href="../styles/home.css">
-    <script src="../js/home.js"></script>
-    <script src="../js/utils.js"></script>
 </head>
 <body>
 <body>
-    
+    <div id="header-container"></div>
     <div class="slider">
         <div class="slider-content">
             <h3>Trường Đại học Công nghệ Thông tin</h3>
@@ -23,19 +21,19 @@
         </div>
         <div class="list">
             <div class="item">
-                <img src="../assets/1.jpg" alt="">
+                <img src="../assets/home-slider-img-5.png" alt="">
             </div>
             <div class="item">
-                <img src="../assets/2.jpg" alt="">
+                <img src="../assets/home-slider-img-4.png" alt="">
             </div>
             <div class="item">
-                <img src="../assets/3.jpg" alt="">
+                <img src="../assets/home-slider-img-3.png" alt="">
             </div>
             <div class="item">
-                <img src="../assets/4.jpg" alt="">
+                <img src="../assets/home-slider-img-2.png" alt="">
             </div>
             <div class="item">
-                <img src="../assets/5.jpg" alt="">
+                <img src="../assets/home-slider-img-1.png" alt="">
             </div>
         </div>
         <div class="buttons">
@@ -171,7 +169,7 @@
             <h4>Khoa học - công nghệ</h4>
             <h3>MỘT SỐ KẾT QUẢ NỔI BẬT</h3>
             <p>Khoa Khoa học và Kỹ thuật Thông tin tập hợp một đội ngũ nghiên cứu với các chuyên gia có kinh nghiệm trong nghiên cứu cơ bản cũng như phát triển các giải pháp ứng dụng về trí tuệ nhân tạo, học máy, dữ liệu lớn, thị giác máy tính, xử lý ngôn ngữ tự nhiên...</p>
-            <a href="/ISE_Web/cac-nhom-nghien-cuu">Tìm hiểu thêm &#8594</a>
+            <a href="../pages/cac-nhom-nghien-cuu.html">Tìm hiểu thêm &#8594</a>
         </div>
     </div>
     <!--Doanh nghiệp - Đối tác-->
@@ -215,5 +213,10 @@
             </div>
         </div>
     </div>
+
+    <div id="footer-container"></div>
+
+    <script src="../js/home.js"></script>
+    <script src="../js/utils.js"></script>
 </body>
 </html>
