Change href path

--- a/pages/home.html
+++ b/pages/home.html
@@ -117,7 +117,7 @@
                             <li>Khai phá dữ liệu</li>
                             <li>Học sâu</li>
                         </ul>
-                        <a href="/ISE_Web/dao-tao?tab=bachelor&program=khdl-bachelor">Tìm hiểu thêm &#8594</a>
+                        <a href="../pages/dao-tao.html">Tìm hiểu thêm &#8594</a>
                     </div>
                     <div class="tabs-content-items" id="CNTT">
                         <img src="../assets/home-tab-img-2.png">
@@ -130,7 +130,7 @@
                             <li>Phát triển Website</li>
                             <li>Công nghệ dữ liệu lớn</li>
                         </ul>
-                        <a href="/ISE_Web/dao-tao?tab=bachelor">Tìm hiểu thêm &#8594</a>
+                        <a href="../pages/dao-tao.html">Tìm hiểu thêm &#8594</a>
                     </div>
                     <div class="tabs-content-items" id="CNNB">
                         <img src="../assets/home-tab-img-3.png">
@@ -143,7 +143,7 @@
                             <li>Kiểm chứng phần mềm</li>
                             <li>Văn hóa doanh nghiệp</li>
                         </ul>
-                        <a href="/ISE_Web/dao-tao?tab=bachelor&program=cnnb-bachelor">Tìm hiểu thêm &#8594</a>
+                        <a href="../pages/dao-tao.html">Tìm hiểu thêm &#8594</a>
                     </div>
                 </div>
             </div>
