fix tab-nav-item bugging on click

--- a/pages/home.html
+++ b/pages/home.html
@@ -79,29 +79,19 @@
         <div class="field">
             <div class="tabs">
                 <ul class="tabs-nav">
-                    <li class="tabs-nav-item active" data-target="KHDL">
-                        <img src="../assets/home-tab-img-1.png">
-                        <div class="tabs-nav-content">
-                            <h4>KHOA HỌC DỮ LIỆU</h4>
-                            <p>Bậc cử nhân・4 năm</p>
-                            <p>Phân tích nâng cao, học máy thống kê, xây dựng giải pháp </p>
-                        </div>
+                    <li class="tabs-nav-item active" data-target="KHDL"> KHOA HỌC DỮ LIỆU<br><br>
+                            Bậc cử nhân・4 năm <br><br>
+                            Học máy thông kê, Trực quan dữ liệu, Khai phá dữ liệu, Học sâu.
                     </li>
                     <li class="tabs-nav-item" data-target="CNTT">
-                        <img src="../assets/home-tab-img-2.png">
-                        <div class="tabs-nav-content">
-                            <h4>CÔNG NGHỆ THÔNG TIN </h4>
-                            <p>Bậc cử nhân / Bậc thạc sĩ / Bậc tiến sĩ</p>
-                            <p>Mạng máy tính, tương tác người và máy, hệ thống website và ứng dụng</p>
-                        </div>
+                        CÔNG NGHỆ THÔNG TIN <br><br>
+                        Bậc cử nhân/ Bậc thạc sĩ/ Bậc tiến sĩ <br><br>
+                        Dữ liệu truyền thông, Mô hình mạng, Phát triển Website, Công nghệ dữ liệu lớn.
                     </li>
                     <li class="tabs-nav-item" data-target="CNNB">
-                        <img src="../assets/home-tab-img-3.png">
-                        <div class="tabs-nav-content">
-                            <h4>CÔNG NGHỆ THÔNG TIN VIỆT NHẬT </h4>
-                            <p>Bậc cử nhân・4 năm</p>
-                            <p>Dữ liệu lớn, truyền thông xã hội và công nghệ website, cầu nối Việt - Nhật</p>
-                        </div>
+                        CÔNG NGHỆ THÔNG TIN VIỆT - NHẬT <br><br>
+                         Bậc cử nhân・4 năm <br><br>
+                        Học máy thông kê, Trực quan dữ liệu, Kiểm chứng phần mềm, Văn hóa doanh nnghiệp,
                     </li>
                     <div class="bg-active"></div>
                 </ul>
