--- a/pages/tin-tuc/tin-tuyen-dung.html
+++ b/pages/tin-tuc/tin-tuyen-dung.html
@@ -23,7 +23,7 @@
 <div class="tuyendung-list">
     <h2>Tin chính</h2>
     <div class="tuyendung-list-items">
-        <img src="">
+        <img src="../assets/news-recruit-fujinet.webp">
         <div class="tuyendung-group">
             <a href="#">Tuyển lập trình viên công ty Fujinet tháng 04/2019</a>
             <p>FUJINET - Là công ty phát triển phần mềm cho thị trường Nhật Bản hàng đầu tại Việt Nam, với gần 800 kỹ sư đang làm việc tại Việt Nam và hơn 50 kỹ sư onsite tại FUJINET JAPAN.
@@ -32,21 +32,21 @@
         </div>  
     </div>
     <div class="tuyendung-list-items">
-        <img src="">
+        <img src="../assets/news-recruit-fptsoftware.jpg">
         <div class="tuyendung-group">
             <a href="#">[FPT SOFTWARE] Thông tin tuyển dụng Fresher Data Engineer</a>
             <p>FPT Software tuyển Freshers Data Engineer - Chương trình đào tạo tài năng</p>
         </div>
     </div>
     <div class="tuyendung-list-items">
-        <img src="">
+        <img src="../assets/news-recruit-tmasolution.png">
         <div class="tuyendung-group">
             <a href="#">TMA Tuyển Lập trình viên</a>
             <p>TMA Tuyển Lập trình viên, Không Cần Phỏng Vấn</p>
         </div> 
     </div>
     <div class="tuyendung-list-items">
-        <img src="">
+        <img src="../assets/news-recruit-fptsoftware.jpg">
         <div class="tuyendung-group">
             <a href="#">Công ty Hệ Thống Thông Tin FPT Tuyển Dụng</a>
             <p>Hiện nay, chúng tôi đang có nhu cầu tuyển dụng vị trí lập trình viên để tham gia phát triển và triển khai các hệ thống CNTT trong và ngoài nước với nội dung công việc và yêu cầu như sau, nếu các bạn quan tâm xin vui lòng gởi hồ sơ của bạn cho chúng tôi.</p>
@@ -56,15 +56,15 @@
 <div class="side-list">
     <h3>Tin mới cập nhật</h3>
     <div class="side-list-items">
-        <img src="">
+        <img src="../assets/news-recruit-tmasolution.png">
         <a>TMA Solutions tuyển dụng - Đại học Công Nghệ Thông Tin</a>
     </div>
     <div class="side-list-items">
-        <img src="">
+        <img src="../assets/news-recruit-fresherios.webp">
         <a>Job description của Fresher iOS</a>
     </div>
     <div class="side-list-items">
-        <img src="">
+        <img src="../assets/news-recruit-fptsoftware.jpg">
         <a>Thông tin tuyển dụng FPT Software HCM</a>
     </div>
 </div>
