Refactor CSS styles for improved layout and design consistency
- Updated styles in doi-ngu-nhan-su.css to enhance the page title section with a new background image and overlay effect, adjusting dimensions and padding for better visual appeal.
- Removed outdated styles from gioi-thieu-chung-new.css to streamline the stylesheet and reduce redundancy.
- Modified styles in gioi-thieu-chung.css to standardize section titles and hero banner elements, improving typography and layout.
- Deleted the obsolete tuyen-sinh-new.css file to clean up the codebase.
- Adjusted styles in tuyen-sinh.css to refine margins and positioning for images and buttons, enhancing overall layout responsiveness.

--- a/pages/gioi-thieu/doi-ngu-nhan-su.html
+++ b/pages/gioi-thieu/doi-ngu-nhan-su.html
@@ -15,9 +15,13 @@
     <main class="main-content">
         <!-- Page Title Section -->
         <div class="page-title-section">
+            <img src="/ISE_Web/assets/phd-banner.png" alt="Hình nền Đội ngũ nhân sự" class="page-title-bg">
+            <!-- Lớp phủ mờ màu trắng/xám nhạt -->
+            <div class="page-title-overlay"></div>
+
             <div class="title-container">
                 <h1 class="main-title">ĐỘI NGŨ NHÂN SỰ</h1>
-                <h2 class="sub-title">KHOA KHOA HỌC VÀ KỸ THUẬT THÔNG TIN</h2>
+                <h2 class="sub-title">KHOA KHOA HỌC<br > VÀ KỸ THUẬT THÔNG TIN</h2>
             </div>
         </div>
 
