--- a/pages/gioi-thieu/gioi-thieu-chung.html
+++ b/pages/gioi-thieu/gioi-thieu-chung.html
@@ -83,20 +83,18 @@
                 </div>
                 <!-- Hình ảnh bên phải -->
                 <div class="image-cluster image-cluster--fuchsia">
-                    <!-- Ảnh 1: Ban lãnh đạo khoa (Nằm sau) -->
-                    <img 
-                        src="https://c.animaapp.com/4mjTJKhq/img/image-67@2x.png" 
-                        alt="Ban lãnh đạo khoa" 
-                        class="image-cluster__image"
-                        onerror="this.src='https://placehold.co/408x261/f5d0fe/083344?text=Hinh+3'"
-                    >
-                    <!-- Ảnh 2: Sinh viên học tập (Nằm trước) -->
-                    <img 
-                        src="https://c.animaapp.com/4mjTJKhq/img/image-65@2x.png" 
-                        alt="Sinh viên học tập" 
-                        class="image-cluster__image"
-                        onerror="this.src='https://placehold.co/400x266/fdf4ff/083344?text=Hinh+4'"
-                    >
+                    <!-- Ảnh 1: Sinh viên học tập (Nằm sau) -->
+                    <img src="https://c.animaapp.com/4mjTJKhq/img/image-65@2x.png"
+                         alt="Sinh viên học tập"
+                         class="image-cluster__image"
+                         onerror="this.src='https://placehold.co/400x266/fdf4ff/083344?text=Hinh+4'">
+
+                    <!-- Ảnh 2: Ban lãnh đạo khoa (Nằm trước) -->
+                    <img src="https://c.animaapp.com/4mjTJKhq/img/image-67@2x.png"
+                         alt="Ban lãnh đạo khoa"
+                         class="image-cluster__image"
+                         onerror="this.src='https://placehold.co/408x261/f5d0fe/083344?text=Hinh+3'">
+
                 </div>
             </div>
         </section>
@@ -110,7 +108,12 @@
                     <!-- Box 1: Lãnh đạo khoa -->
                     <div class="org-chart-box">
                         <p class="org-chart-box__title">Lãnh đạo khoa</p>
-                        <p class="org-chart-box__text">TS. Nguyễn Văn Kiệt - Phó Trưởng khoa, Phụ trách Khoa</p>
+                        <p class="org-chart-box__text">
+                            <a href="/ISE_Web/doi-ngu-nhan-su/doi-ngu-nhan-su_kietnv"
+                               class="org-chart-link">
+                                TS. Nguyễn Văn Kiệt - Phó Trưởng khoa, Phụ trách Khoa
+                            </a>
+                        </p>
                     </div>
                     
                     <!-- Box 2: Văn phòng khoa -->
@@ -123,10 +126,20 @@
                     <!-- Box 3 & 4: Các bộ môn -->
                     <div class="org-chart-grid">
                         <div class="org-chart-box">
-                            <p class="org-chart-box__title">Bộ môn Khoa học dữ liệu</p>
+                            <p class="org-chart-box__title">
+                                <a href="/ISE_Web/gioi-thieu/doi-ngu-nhan-su#dataScience"
+                                   class="org-chart-link">
+                                    Bộ môn Khoa học dữ liệu
+                                </a>
+                            </p>
                         </div>
                         <div class="org-chart-box">
-                            <p class="org-chart-box__title">Bộ môn Thiết bị di động và công nghệ web</p>
+                            <p class="org-chart-box__title">
+                                <a href="/ISE_Web/gioi-thieu/doi-ngu-nhan-su#mobileWeb"
+                                   class="org-chart-link">
+                                    Bộ môn Thiết bị di động và công nghệ web
+                                </a>
+                            </p>
                         </div>
                     </div>
                 </div>
