Update navigation links to include the correct path prefix for news sections

--- a/pages/tin-tuc/tin-khoa-hoc-cong-nghe.html
+++ b/pages/tin-tuc/tin-khoa-hoc-cong-nghe.html
@@ -49,10 +49,10 @@
 <div class="news-nav">
     <h2>TIẾP TỤC XEM VỚI...</h2>
     <div class="news-nav-flex">
-        <a class="news-nav-item" href="/tin-tuc/tin-hoc-vu">Tin học vụ</a>
-        <a class="news-nav-item" href="/tin-tuc/tin-tot-nghiep">Tin tốt nghiệp</a>
-        <a class="news-nav-item" href="/tin-tuc/tin-tuyen-dung">Tin tuyển dụng</a>
-        <a class="news-nav-item active" href="/tin-tuc/tin-khoa-hoc-cong-nghe">Tin Khoa học - Công nghệ</a>
+        <a class="news-nav-item" href="/ISE_Web/tin-tuc/tin-hoc-vu">Tin học vụ</a>
+        <a class="news-nav-item" href="/ISE_Web/tin-tuc/tin-tot-nghiep">Tin tốt nghiệp</a>
+        <a class="news-nav-item" href="/ISE_Web/tin-tuc/tin-tuyen-dung">Tin tuyển dụng</a>
+        <a class="news-nav-item active" href="/ISE_Web/tin-tuc/tin-khoa-hoc-cong-nghe">Tin Khoa học - Công nghệ</a>
     </div>
 </div>
 <div id="footer-container"></div>
