--- a/pages/gioi-thieu/gioi-thieu-chung.html
+++ b/pages/gioi-thieu/gioi-thieu-chung.html
@@ -127,7 +127,7 @@
                     <div class="org-chart-grid">
                         <div class="org-chart-box">
                             <p class="org-chart-box__title">
-                                <a href="/ISE_Web/gioi-thieu/doi-ngu-nhan-su#dataScience"
+                                <a href="/ISE_Web/gioi-thieu/doi-ngu-nhan-su?tab=dataScience"
                                    class="org-chart-link">
                                     Bộ môn Khoa học dữ liệu
                                 </a>
@@ -135,7 +135,7 @@
                         </div>
                         <div class="org-chart-box">
                             <p class="org-chart-box__title">
-                                <a href="/ISE_Web/gioi-thieu/doi-ngu-nhan-su#mobileWeb"
+                                <a href="/ISE_Web/gioi-thieu/doi-ngu-nhan-su?tab=mobileWeb"
                                    class="org-chart-link">
                                     Bộ môn Thiết bị di động và công nghệ web
                                 </a>
